Clamp page title length to prevent horrible spilling onto page at large base font sizes

--- a/src/components/Page/Page.scss
+++ b/src/components/Page/Page.scss
@@ -14,6 +14,12 @@
 
     h1 {
         margin: 0.3em 0 0.3em 0;
+
+        display           : -webkit-box;
+        -webkit-box-orient: vertical;
+        -webkit-line-clamp: 2;
+        overflow          : hidden;
+        text-overflow     : ellipsis;
     }
 
     .subtitle {
